--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -97,7 +97,6 @@
   font-size: 1.4rem;
   letter-spacing: -0.01rem;
   line-height: 1.3;
-
   @include media-breakpoint-up(xxl) {
     letter-spacing: -0.02rem;
     font-size: 1.6rem;
@@ -111,6 +110,10 @@
   font-family: $font-family-work-sans-regular;
   text-decoration: underline;
   color: #000;
+  @include media-breakpoint-up(xxl) {
+    font-size: 1.6rem;
+    letter-spacing: -0.1rem;
+  }
 
   &:hover,
   &:focus,
@@ -119,32 +122,26 @@
     text-decoration: underline;
   }
 
-  @include media-breakpoint-up(xxl) {
-    font-size: 1.6rem;
-    letter-spacing: -0.1rem;
-  }
 }
 
 @mixin text-display-title {
   font-family: $font-family-she-always-walks-alone;
   color: #000;
-  font-size: 3.2rem;
-  letter-spacing: -0.01rem;
-  line-height: 1;
-
-  @include media-breakpoint-up(xxl) {
-    font-size: 4.4rem;
-    letter-spacing: -0.02rem;
-    line-height: 1.2;
+  font-size: 4.4rem;
+  letter-spacing: -0.02rem;
+  line-height: 1.2;
+  @include media-breakpoint-only(xl) {
+    font-size: 3.2rem;
+    letter-spacing: -0.01rem;
+    line-height: 1;
   }
 }
 
 @mixin text-thin-title {
   font-family: $font-family-work-sans-thin;
-  font-size: 2rem;
   line-height: 1.2;
   color: #000;
-
+  font-size: 2rem;
   @include media-breakpoint-up(xxl) {
     font-size: 2.4rem;
   }
@@ -153,38 +150,33 @@
 @mixin text-thin-title-big {
   font-family: $font-family-work-sans-thin;
   color: #000;
-  font-size: 3.4rem;
-  letter-spacing: -0.08rem;
-  line-height: 1;
-
-  @include media-breakpoint-up(xxl) {
-    font-size: 4.6rem;
-    letter-spacing: -0.1rem;
-    line-height: 1.2;
+  font-size: 4.6rem;
+  letter-spacing: -0.1rem;
+  line-height: 1.2;
+  @include media-breakpoint-only(xl) {
+    font-size: 3.4rem;
+    letter-spacing: -0.08rem;
+    line-height: 1;
   }
 }
 
 @mixin text-thin-title-small {
   font-family: $font-family-work-sans-thin;
-  font-size: 1.4rem;
   line-height: 1.2;
   letter-spacing: 0.03rem;
   color: #000;
-
-  @include media-breakpoint-up(xxl) {
-    line-height: 1.2;
-    font-size: 1.7rem;
-    letter-spacing: 0.03rem;
+  font-size: 1.7rem;
+  @include media-breakpoint-only(xl) {
+    font-size: 1.4rem;
   }
 }
 
 @mixin text-light-title {
   font-family: $font-family-work-sans-light;
-  font-size: 2rem;
-  letter-spacing: -0.06rem;
   line-height: 1.2;
   color: #000;
-
+  font-size: 2rem;
+  letter-spacing: -0.06rem;
   @include media-breakpoint-up(xxl) {
     font-size: 2.4rem;
     letter-spacing: -0.08rem;
@@ -193,11 +185,10 @@
 
 @mixin text-light-title-small {
   font-family: $font-family-work-sans-light;
-  font-size: 1.6rem;
-  letter-spacing: -0.07rem;
   line-height: 1.2;
   color: #000;
-
+  font-size: 1.4rem;
+  letter-spacing: -0.07rem;
   @include media-breakpoint-up(xxl) {
     font-size: 2rem;
     letter-spacing: -0.08rem;
@@ -206,27 +197,25 @@
 
 @mixin text-regular-title {
   font-family: $font-family-work-sans-regular;
-  font-size: 2rem;
-  letter-spacing: -0.12rem;
   line-height: 1.2;
   color: #000;
-
-  @include media-breakpoint-up(xxl) {
-    font-size: 2.7rem;
-    letter-spacing: -0.2rem;
+  font-size: 2.7rem;
+  letter-spacing: -0.2rem;
+  @include media-breakpoint-only(xl) {
+    font-size: 2rem;
+    letter-spacing: -0.12rem;
   }
 }
 
 @mixin text-regular-title-small {
   font-family: $font-family-work-sans-regular;
-  font-size: 1.5rem;
-  letter-spacing: -0.08rem;
   line-height: 1.1;
   color: #000;
-
-  @include media-breakpoint-up(xxl) {
-    font-size: 2.2rem;
-    letter-spacing: -0.12rem;
+  font-size: 2.2rem;
+  letter-spacing: -0.12rem;
+  @include media-breakpoint-only(xl) {
+    font-size: 1.5rem;
+    letter-spacing: -0.08rem;
   }
 }
 
@@ -265,16 +254,16 @@ h3, .h3 {
 
 .main-container {
   @include media-breakpoint-only(lg) {
-    padding: 0 4rem;
+    //padding: 0 4rem;
   }
   @include media-breakpoint-only(md) {
-    padding: 0 3rem;
+    //padding: 0 3rem;
   }
   @include media-breakpoint-only(sm) {
-    padding: 0 2rem;
+    //padding: 0 2rem;
   }
   @include media-breakpoint-only(xs) {
-    padding: 0 1rem;
+    //padding: 0 1rem;
   }
 }
 
@@ -284,6 +273,7 @@ h3, .h3 {
 
 %article-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   position: relative;
@@ -321,6 +311,15 @@ h3, .h3 {
 
 .section-header-subtitle {
   @include text-thin-title();
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
+}
+
+.section-header-nav {
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
 }
 
 .article-footer {
