--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -9,7 +9,6 @@
 
 #portfolio {
   @extend %article-wrapper;
-  flex-direction: column;
 
   & .article-body {
     @include media-breakpoint-down(lg) {
@@ -50,22 +49,24 @@
   }
 
   %portfolio-item {
-    min-height: 700px;
-    display: flex;
-    margin-bottom: 0;
-    @include media-breakpoint-up(xl) {
-      min-height: 800px;
-      height: 100vh;
+    @include media-breakpoint-only(xl) {
+      padding-top: 55%;
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-top: 50%;
     }
   }
 
   .portfolio-items-wrapper {
     position: relative;
-    width: calc(100% + 8rem);
-    padding-top: 66%;
+    width: 100%;
+    padding-top: 60%;
+    margin-top: 2rem;
     @include media-breakpoint-up(xl) {
+      margin-top: 0;
+      position: absolute;
+      left: 0;
       width: 100%;
-      padding-top: 60%;
     }
   }
 
@@ -81,8 +82,8 @@
 
   .portfolio-item-secondary-title {
     @include text-thin-title-small();
-      margin-top: 0.5rem;
-      margin-bottom: 0.1rem;
+      margin-top: 0.3rem;
+      margin-bottom: 0;
     @include media-breakpoint-up(xl) {
       margin-top: 0;
       margin-bottom: 0;
@@ -92,7 +93,7 @@
 
   .portfolio-item-text {
     @include text-base();
-    margin-bottom: 0.3rem;
+    margin-bottom: 0;
     @include media-breakpoint-up(xl) {
       line-height: 1.2;
       margin-bottom: 0.1rem;
@@ -106,29 +107,37 @@
 
   .portfolio-item-title-wrapper {
     display: block;
-    width: 50%;
-    margin-top: 70px;
+    width: 100%;
+    margin-top: 100px;
     @include media-breakpoint-up(xl) {
+      display: none;
+      bottom: 57%;
       margin-top: 0;
       position: absolute;
-      width: 31%;
-      max-width: 200px;
-      padding-top: 28%;
+      width: 200px;
+      height: 270px;
     }
     @include media-breakpoint-up(xxl) {
-      padding-top: 26%;
-      max-width: 241px;
+      bottom: 52%;
+      width: 241px;
+      height: 320px;
     }
   }
 
   .portfolio-item-title-wrapper-horizontal {
     display: block;
-    position: absolute;
-    width: 52%;
-    max-width: 270px;
-    padding-top: 39%;
+    width: 100%;
+    margin-top: 70px;
+    @include media-breakpoint-up(xl) {
+      //display: none;
+      margin-top: 0;
+      position: absolute;
+      width: 280px;
+      height: 215px;
+    }
     @include media-breakpoint-up(xxl) {
-      max-width: 320px;
+      width: 320px;
+      height: 250px;
     }
 
     & .portfolio-item-title-content {
@@ -184,7 +193,9 @@
 
   .child-hovered .portfolio-item-title-wrapper,
   .child-hovered .portfolio-item-title-wrapper-horizontal {
-    display: flex;
+    @include media-breakpoint-up(xl) {
+      display: block;
+    }
   }
 
   .portfolio-item-details-wrapper {
@@ -211,9 +222,8 @@
   .project-type-label {
     @include text-light-title-small();
     position: absolute;
-    top: -2.4rem;
+    top: -1.8rem;
     left: 4.2%;
-
     @include media-breakpoint-up(xxl) {
       top: -2.4rem;
     }
@@ -264,26 +274,31 @@
     display: block;
   }
 
+  .line-breaker {
+    @include media-breakpoint-up(xl) {
+      display: block;
+    }
+  }
 
   /////////  DEVICES  /////////
 
   .portfolio-item-desktop {
     position: absolute;
-    width: calc(56% + (56% * 0.1));
+    width: calc(56% + (56% * 0.117));
     max-width: 796px;
 
     & .portfolio-item-img-preview {
       position: absolute;
       top: 5%;
       left: 4.2%;
-      width: 93%;
+      width: 91.6%;
       max-width: 729px;
     }
   }
 
   & .portfolio-item-tablet {
     position: absolute;
-    width: calc(19% + (19% * 0.1));
+    width: calc(19% + (19% * 0.117));
     max-width: 263px;
 
     & .portfolio-item-img-preview {
@@ -297,28 +312,28 @@
 
   & .portfolio-item-notebook {
     position: absolute;
-    width: calc(42% + (42% * 0.1));
+    width: calc(42% + (42% * 0.117));
     max-width: 600px;
 
     & .portfolio-item-img-preview {
       position: absolute;
       top: 5%;
       left: 12.8%;
-      width: 75%;
+      width: 74.5%;
       max-width: 445px;
     }
   }
 
   & .portfolio-item-mobile {
     position: absolute;
-    width: calc(8% + (8% * 0.1));
+    width: calc(8% + (8% * 0.117));
     max-width: 111px;
 
     & .portfolio-item-img-preview {
       position: absolute;
       top: 8.5%;
       left: 4%;
-      width: 93%;
+      width: 92%;
       max-width: 101px;
     }
   }
@@ -327,7 +342,7 @@
   & .portfolio-item-tv2 {
     position: absolute;
     bottom: 21%;
-    left: 1%;
+    left: 4%;
     width: 55.9%;
     max-width: 800px;
 
@@ -342,7 +357,7 @@
 
   & .portfolio-item-tv2 {
     bottom: 4%;
-    left: 37%;
+    left: 40%;
   }
 
   & .notebooks-set-item1 {
@@ -354,19 +369,27 @@
 
     & .project-type-label {
       left: auto;
-      right: 11%;
+      right: 10.5%;
+      top: -1.6rem;
+      @include media-breakpoint-up(xxl) {
+        top: -2.4rem;
+      }
     }
   }
 
   & .notebooks-set-item2 {
     bottom: 36%;
-    left: 57%;
+    left: 58%;
     @include media-breakpoint-up(xxl) {
       left: 56%;
     }
 
     & .project-type-label {
-      left: 11%;
+      left: 10.5%;
+      top: -1.6rem;
+      @include media-breakpoint-up(xxl) {
+        top: -2.4rem;
+      }
     }
   }
 
@@ -379,25 +402,33 @@
 
     & .project-type-label {
       left: auto;
-      right: 11%;
+      right: 10.5%;
+      top: -1.6rem;
+      @include media-breakpoint-up(xxl) {
+        top: -2.4rem;
+      }
     }
   }
 
   & .notebooks-set-item4 {
     bottom: 24%;
-    left: 46%;
+    left: 47%;
     @include media-breakpoint-up(xxl) {
       left: 45%;
     }
 
     & .project-type-label {
-      left: 11%;
+      left: 10.5%;
+      top: -1.6rem;
+      @include media-breakpoint-up(xxl) {
+        top: -2.4rem;
+      }
     }
   }
 
   & .notebooks-set-item5 {
     bottom: 12%;
-    left: 28.9%;
+    left: 29.3%;
     @include media-breakpoint-up(xxl) {
       left: 26.9%;
     }
@@ -407,6 +438,9 @@
       bottom: -1rem;
       top: auto;
       transform: translateX(-50%);
+      @include media-breakpoint-up(xxl) {
+        bottom: -1.4rem;
+      }
     }
   }
 
@@ -419,6 +453,10 @@
 
   & .portfolio-item-bk {
     @extend %portfolio-item;
+
+    & .portfolio-items-wrapper {
+      top: 10%;
+    }
 
     & .portfolio-item-desktop {
       bottom: 7%;
@@ -443,11 +481,9 @@
     & .portfolio-item-title-wrapper {
       @include media-breakpoint-only(xl) {
         left: 76%;
-        bottom: 54%;
       }
       @include media-breakpoint-up(xxl) {
         left: calc(850px + 10%);
-        bottom: 55%;
       }
     }
 
@@ -462,6 +498,10 @@
   & .portfolio-item-vendomo {
     @extend %portfolio-item;
 
+    & .portfolio-items-wrapper {
+      top: 10%;
+    }
+
     & .portfolio-item-desktop {
       bottom: 7%;
       left: 23%;
@@ -469,22 +509,23 @@
 
     & .portfolio-item-tablet {
       bottom: 5%;
-      left: 66%;
+      left: 70%;
     }
 
     & .portfolio-item-notebook {
       bottom: 5%;
-      left: 1%;
+      left: 4%;
     }
 
     & .portfolio-item-mobile {
       bottom: 4%;
-      left: 82%;
+      left: 86%;
     }
 
     & .portfolio-item-title-wrapper {
-      left: -37%;
-      top: -13%;
+      @include media-breakpoint-up(xl) {
+        left: 1%;
+      }
     }
 
     & .portfolio-item-subtitle-employer {
@@ -497,6 +538,10 @@
 
   & .portfolio-item-vendomo-crm {
     @extend %portfolio-item;
+
+    & .portfolio-items-wrapper {
+      top: 10%;
+    }
 
     & .portfolio-item-desktop {
       bottom: 7%;
@@ -519,8 +564,12 @@
     }
 
     & .portfolio-item-title-wrapper {
-      right: -35%;
-      top: -12%;
+      @include media-breakpoint-only(xl) {
+        left: 72%;
+      }
+      @include media-breakpoint-up(xxl) {
+        left: calc(790px + 10%);
+      }
     }
 
     & .portfolio-item-subtitle-employer {
@@ -534,6 +583,10 @@
   & .portfolio-item-foodora {
     @extend %portfolio-item;
 
+    & .portfolio-items-wrapper {
+      top: 10%;
+    }
+
     & .portfolio-item-desktop {
       bottom: 7%;
       left: 25%;
@@ -541,22 +594,23 @@
 
     & .portfolio-item-tablet {
       bottom: 5%;
-      left: 73%;
+      left: 74%;
     }
 
     & .portfolio-item-notebook {
       bottom: 5%;
-      left: 1%;
+      left: 3%;
     }
 
     & .portfolio-item-mobile {
       bottom: 4%;
-      left: 62.8%;
+      left: 63.8%;
     }
 
     & .portfolio-item-title-wrapper {
-      left: -37%;
-      top: -12%;
+      @include media-breakpoint-up(xl) {
+        right: 77%;
+      }
     }
 
     & .portfolio-item-subtitle-employer {
@@ -571,16 +625,25 @@
   & .portfolio-item-cubomusica {
     @extend %portfolio-item;
 
+    & .portfolio-items-wrapper {
+      top: 20%;
+    }
+
+    & .portfolio-items-wrapper {
+      padding-top: 56%;
+    }
+
     & .portfolio-item-title {
       margin: 0.2rem 0 0.2rem;
     }
 
     & .portfolio-item-title-wrapper-horizontal {
-      right: 12%;
-      top: -60%;
+      @include media-breakpoint-up(xl) {
+        bottom: 63%;
+        left: 62%;
+      }
       @include media-breakpoint-up(xxl) {
-        right: 15%;
-        top: -300px;
+        bottom: 60%;
       }
     }
   }
@@ -592,6 +655,14 @@
   & .portfolio-item-others {
     @extend %portfolio-item;
 
+    & .portfolio-items-wrapper {
+      top: 25%;
+    }
+
+    & .portfolio-items-wrapper {
+      padding-top: 48%;
+    }
+
     & .portfolio-item-notebook {
       width: 41%;
       @include media-breakpoint-up(xxl) {
@@ -599,16 +670,17 @@
       }
     }
 
-    & .project-type-label {
-      bottom: -0.5rem;
-    }
-
     & .portfolio-item-title-wrapper-horizontal {
-      right: -44%;
-      top: -42%;
+      @include media-breakpoint-up(xl) {
+        right: 39.5%;
+        top: 11%;
+        width: 22%;
+        padding-top: 17%;
+        height: auto;
+      }
       @include media-breakpoint-up(xxl) {
-        right: -45%;
-        top: -180px;
+        top: 9%;
+        right: 41%;
       }
     }
 
