--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -4,8 +4,11 @@
 
 #skills {
   @extend %article-wrapper;
-  height: 90vh;
-  min-height: 700px;
+  margin: 50px 0;
+  padding-top: 45%;
+  @include media-breakpoint-down(lg) {
+    padding-top: 135%;
+  }
   //background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
 
   & .section-header-img-wrapper {
@@ -16,7 +19,25 @@
   }
 
   & .section-header {
-    height: 100%;
+    @include media-breakpoint-down(lg) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 30%;
+    }
+    @include media-breakpoint-up(xl) {
+      height: 100%;
+    }
+  }
+
+  & .article-body {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
   }
 
   & .article-img-wrapper {
@@ -110,8 +131,8 @@
 
   & .skills-group-javascript {
     @extend %skills-group;
-    padding-top: 34%;
-    width: 34%;
+    padding-top: 36%;
+    width: 36%;
     @include media-breakpoint-only(xl) {
       padding-top: 31%;
       width: 31%;
@@ -132,8 +153,8 @@
   }
 
   %skills-group-medium {
-    padding-top: 25%;
-    width: 25%;
+    padding-top: 26%;
+    width: 26%;
     @include media-breakpoint-only(xl) {
       padding-top: 22%;
       width: 22%;
@@ -154,7 +175,7 @@
 
     & .skills-list {
       top: -50%;
-      left: -180%;
+      left: -174%;
     }
   }
 
@@ -165,14 +186,14 @@
 
     & .skills-list {
       top: -50%;
-      right: -80%;
+      right: -74%;
     }
   }
 
   %skills-group-small {
     @extend %skills-group;
-    padding-top: 20%;
-    width: 20%;
+    padding-top: 22%;
+    width: 22%;
     @include media-breakpoint-only(xl) {
       padding-top: 17%;
       width: 17%;
@@ -190,7 +211,7 @@
 
     & .skills-list {
       top: 58%;
-      left: -145%;
+      left: -141%;
       @include media-breakpoint-only(xl) {
         top: 60%;
         left: -156%;
@@ -208,7 +229,7 @@
 
     & .skills-list {
       top: 58%;
-      right: -47%;
+      right: -43%;
       @include media-breakpoint-only(xl) {
         top: 60%;
         right: -56%;
@@ -226,7 +247,7 @@
 
     & .skills-list {
       top: -156%;
-      left: -145%;
+      left: -141%;
       @include media-breakpoint-only(xl) {
         top: -160%;
         left: -156%;
@@ -244,7 +265,7 @@
 
     & .skills-list {
       top: -156%;
-      right: -47%;
+      right: -43%;
       @include media-breakpoint-only(xl) {
         top: -160%;
         right: -56%;
