--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -6,10 +6,10 @@
   @extend %article-wrapper;
   align-items: center;
   min-height: 500px;
-  @include media-breakpoint-only(xl) {
+  @include media-breakpoint-only(lg) {
     min-height: 600px;
   }
-  @include media-breakpoint-up(xxl) {
+  @include media-breakpoint-up(xl) {
     min-height: 700px;
   }
 
@@ -28,7 +28,7 @@
     padding-right: 8%;
     padding-left: 8%;
     text-align: center;
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       padding-left: 0;
       padding-right: 25%;
     }
@@ -61,23 +61,32 @@
   & .contact-methods {
     display: flex;
     justify-content: center;
+    width: 100%;
+  }
+
+  & .contact-method-wrapper {
+    border-radius: 50%;
+    width: 32%;
+    padding-top: 32%;
+    margin: 2vh 1vw;
+    border: 1px dotted #8c8c8c;
+    max-width: 300px;
+    position: relative;
+    @include media-breakpoint-up(xl) {
+      margin: 3vh 2vw;
+    }
   }
 
   & .contact-method {
-    border-radius: 50%;
-    width: 190px;
-    height: 190px;
-    margin: 2rem 1rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px dotted #8c8c8c;
-    @include media-breakpoint-up(xxl) {
-      margin: 3rem 2rem;
-      width: 250px;
-      height: 250px;
-    }
   }
 
   & .contact-method-img {
