--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -3,21 +3,34 @@
 
 #intro {
   @extend %article-wrapper;
-  height: 100vh;
-  min-height: 580px;
 
-  @include media-breakpoint-up(xxl) {
-    min-height: 900px;
+
+  @include media-breakpoint-only(md) {
+    height: 100vh;
+    min-height: 620px;
+  }
+  @include media-breakpoint-up(lg) {
+    height: 100vh;
+    min-height: 580px;
+  }
+
+  @include media-breakpoint-up(xl) {
+    min-height: 780px;
   }
 
   & .section-header {
     width: 100%;
     height: 100%;
+    padding-left: 0;
   }
 
-
   & .section-header-title {
-    margin-top: 6vh;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    @include media-breakpoint-up(md) {
+      margin-top: 6vh;
+      margin-bottom: 3vh;
+    }
   }
 
   & .intro-name {
@@ -31,20 +44,40 @@
   }
 
   & .intro-message {
-    margin-bottom: 3vh;
+    margin-bottom: 15px;
+    @include media-breakpoint-up(md) {
+      margin-bottom: 10px;
+    }
+    @include media-breakpoint-up(lg) {
+      margin-bottom: 3px;
+    }
+
+    &:last-of-type {
+      margin-bottom: 20px;
+      @include media-breakpoint-up(md) {
+        margin-bottom: 2vh;
+      }
+    }
   }
 
   & .section-header-img-wrapper {
-    max-width: 320px;
-    width: 43%;
-    margin-bottom: 1rem;
-    @include media-breakpoint-only(xl) {
-      max-width: 400px;
-      width: 18%;
+    width: 40vh;
+    min-width: 230px;
+    max-width: 280px;
+    margin-top: 11vh;
+    @include media-breakpoint-up(sm) {
+      max-width: 320px;
+    }
+    @include media-breakpoint-up(md) {
+      margin-top: 10px;
+      margin-bottom: 0;
+    }
+    @include media-breakpoint-up(xl) {
+      max-width: 430px;
+      min-width: 320px;
     }
     @include media-breakpoint-up(xxl) {
-      width: 20%;
-      margin-bottom: 2rem;
+      width: 430px;
     }
   }
 
@@ -77,10 +110,16 @@
     margin-bottom: 0;
     position: relative;
     top: 10px;
+    @include media-breakpoint-down(sm) {
+      display: none;
+    }
   }
 
   & .arrow-down {
     visibility: hidden;
+    @include media-breakpoint-down(sm) {
+      display: none;
+    }
   }
 
   &.teaser-title-visible .intro-teaser-title,
@@ -88,17 +127,3 @@
     visibility: visible;
   }
 }
-
-
-//#intro-code {
-//  z-index: 1;
-//  position: absolute;
-//  top: 0;
-//  left: 0;
-//  width: 50%;
-//  font-size: 24px;
-//  color: rgba(255,255,255,0.5);
-//  text-align: left;
-//  line-height: 1;
-//  padding: 40px;
-//}
