--- a/src/scss/sections/_outro.scss
+++ b/src/scss/sections/_outro.scss
@@ -26,7 +26,7 @@
   & .section-header-sub-title {
     @include text-thin-title();
     margin-bottom: 0;
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       margin-bottom: 1.8rem;
     }
   }
