--- a/src/scss/sections/_references.scss
+++ b/src/scss/sections/_references.scss
@@ -4,10 +4,10 @@
 #references {
   @extend %article-wrapper;
   margin: 10vh 0;
-  @include media-breakpoint-only(xl) {
+  @include media-breakpoint-only(lg) {
     margin: 12vh 0;
   }
-  @include media-breakpoint-up(xxl) {
+  @include media-breakpoint-up(xl) {
     margin: 15vh 0;
   }
 
@@ -20,10 +20,10 @@
 
   & .carousel {
     min-height: 700px;
-    @include media-breakpoint-only(xl) {
+    @include media-breakpoint-only(lg) {
       min-height: 320px;
     }
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       min-height: 350px;
     }
   }
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-around;
     padding: 0;
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       flex-direction: column;
       align-items: center;
     }
@@ -44,7 +44,7 @@
 
   & .reference-wrapper {
     width: 28%;
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       width: 80%;
       padding-bottom: 50px;
     }
@@ -58,7 +58,7 @@
   & .reference-content {
     position: relative;
     font-style: italic;
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       margin-bottom: 0.3rem;
     }
   }
@@ -68,7 +68,7 @@
     margin-bottom: 0.6rem;
     margin-top: 1.2rem;
     position: relative;
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       margin-top: 0.6rem;
     }
   }
@@ -99,28 +99,28 @@
   & .carousel-control {
     position: absolute;
     top: 33%;
-    @include media-breakpoint-down(xl) {
+    @include media-breakpoint-down(lg) {
       width: 60px;
     }
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       top: 10px;
     }
   }
 
   & .carousel-control.left {
-    @include media-breakpoint-down(xl) {
+    @include media-breakpoint-down(lg) {
       left: -20px;
     }
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       left: -80px;
     }
   }
 
   & .carousel-control.right {
-    @include media-breakpoint-down(xl) {
+    @include media-breakpoint-down(lg) {
       right: -20px;
     }
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       right: -80px;
     }
   }
