--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -6,27 +6,27 @@
   @extend %article-wrapper;
   margin: 50px 0;
   padding-top: 45%;
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(md) {
     padding-top: 135%;
   }
   //background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
 
   & .section-header-img-wrapper {
     max-width: 210px;
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       max-width: 250px;
     }
   }
 
   & .section-header {
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
       height: 30%;
     }
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       height: 100%;
     }
   }
@@ -117,11 +117,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    @include media-breakpoint-only(xl) {
+    @include media-breakpoint-only(lg) {
       top: 50%;
       left: 49.4%;
     }
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       top: 50%;
       left: 47.8%;
     }
@@ -133,11 +133,11 @@
     @extend %skills-group;
     padding-top: 36%;
     width: 36%;
-    @include media-breakpoint-only(xl) {
+    @include media-breakpoint-only(lg) {
       padding-top: 31%;
       width: 31%;
     }
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       padding-top: 29%;
       width: 29%;
     }
@@ -155,11 +155,11 @@
   %skills-group-medium {
     padding-top: 26%;
     width: 26%;
-    @include media-breakpoint-only(xl) {
+    @include media-breakpoint-only(lg) {
       padding-top: 22%;
       width: 22%;
     }
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       padding-top: 20%;
       width: 20%;
     }
@@ -194,11 +194,11 @@
     @extend %skills-group;
     padding-top: 22%;
     width: 22%;
-    @include media-breakpoint-only(xl) {
+    @include media-breakpoint-only(lg) {
       padding-top: 17%;
       width: 17%;
     }
-    @include media-breakpoint-up(xxl) {
+    @include media-breakpoint-up(xl) {
       padding-top: 15%;
       width: 15%;
     }
@@ -212,11 +212,11 @@
     & .skills-list {
       top: 58%;
       left: -141%;
-      @include media-breakpoint-only(xl) {
+      @include media-breakpoint-only(lg) {
         top: 60%;
         left: -156%;
       }
-      @include media-breakpoint-up(xxl) {
+      @include media-breakpoint-up(xl) {
         top: 60%;
         left: -160%;
       }
@@ -230,11 +230,11 @@
     & .skills-list {
       top: 58%;
       right: -43%;
-      @include media-breakpoint-only(xl) {
+      @include media-breakpoint-only(lg) {
         top: 60%;
         right: -56%;
       }
-      @include media-breakpoint-up(xxl) {
+      @include media-breakpoint-up(xl) {
         top: 60%;
         right: -60%;
       }
@@ -248,11 +248,11 @@
     & .skills-list {
       top: -156%;
       left: -141%;
-      @include media-breakpoint-only(xl) {
+      @include media-breakpoint-only(lg) {
         top: -160%;
         left: -156%;
       }
-      @include media-breakpoint-up(xxl) {
+      @include media-breakpoint-up(xl) {
         top: -160%;
         left: -160%;
       }
@@ -266,11 +266,11 @@
     & .skills-list {
       top: -156%;
       right: -43%;
-      @include media-breakpoint-only(xl) {
+      @include media-breakpoint-only(lg) {
         top: -160%;
         right: -56%;
       }
-      @include media-breakpoint-up(xxl) {
+      @include media-breakpoint-up(xl) {
         top: -160%;
         right: -60%;
       }
