--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -97,6 +97,11 @@
   font-size: 1.4rem;
   letter-spacing: -0.01rem;
   line-height: 1.3;
+  @include media-breakpoint-only(md) {
+    letter-spacing: -0.02rem;
+    font-size: 1.6rem;
+    line-height: 1.4;
+  }
   @include media-breakpoint-up(xl) {
     letter-spacing: -0.02rem;
     font-size: 1.6rem;
@@ -110,6 +115,10 @@
   font-family: $font-family-work-sans-regular;
   text-decoration: underline;
   color: #000;
+  @include media-breakpoint-only(md) {
+    font-size: 1.6rem;
+    letter-spacing: -0.1rem;
+  }
   @include media-breakpoint-up(xl) {
     font-size: 1.6rem;
     letter-spacing: -0.1rem;
@@ -121,7 +130,6 @@
     color: #8c8c8c;
     text-decoration: underline;
   }
-
 }
 
 @mixin text-display-title {
@@ -134,6 +142,11 @@
     font-size: 3.8rem;
     letter-spacing: -0.015rem;
     line-height: 1.1;
+  }
+  @include media-breakpoint-only(md) {
+    font-size: 4.4rem;
+    letter-spacing: -0.02rem;
+    line-height: 1.2;
   }
   @include media-breakpoint-up(xl) {
     font-size: 4.4rem;
@@ -173,9 +186,17 @@
 @mixin text-thin-title-small {
   font-family: $font-family-work-sans-thin;
   line-height: 1.2;
-  letter-spacing: 0.03rem;
   color: #000;
   font-size: 1.7rem;
+  letter-spacing: 0.03rem;
+  @include media-breakpoint-down(sm) {
+    font-size: 1.6rem;
+    letter-spacing: 0.05rem;
+  }
+  @include media-breakpoint-only(md) {
+    font-size: 1.8rem;
+    letter-spacing: 0.03rem;
+  }
   @include media-breakpoint-only(lg) {
     font-size: 1.4rem;
   }
@@ -197,8 +218,12 @@
   font-family: $font-family-work-sans-light;
   line-height: 1.2;
   color: #000;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   letter-spacing: -0.07rem;
+  @include media-breakpoint-only(md) {
+    font-size: 1.6rem;
+    letter-spacing: -0.08rem;
+  }
   @include media-breakpoint-up(xl) {
     font-size: 2rem;
     letter-spacing: -0.08rem;
@@ -211,6 +236,10 @@
   color: #000;
   font-size: 2.7rem;
   letter-spacing: -0.2rem;
+  @include media-breakpoint-down(sm) {
+    font-size: 2rem;
+    letter-spacing: -0.12rem;
+  }
   @include media-breakpoint-only(lg) {
     font-size: 2rem;
     letter-spacing: -0.12rem;
@@ -272,6 +301,8 @@ h3, .h3 {
   justify-content: center;
   align-items: flex-start;
   position: relative;
+  max-width: 1920px;
+  margin: auto;
   @include media-breakpoint-down(md) {
     margin-bottom: 18vh;
     padding-left: 5%;
@@ -303,6 +334,10 @@ h3, .h3 {
   @include media-breakpoint-up(xl) {
     padding-left: 0;
     width: 25%;
+  }
+  @include media-breakpoint-up(xxl) {
+    width: 480px;
+    left: auto;
   }
 }
 
@@ -359,7 +394,7 @@ h3, .h3 {
 }
 
 &.scrolling-this .section-header {
-  position: fixed;
+  position: fixed
 }
 
 &.scrolled-this .section-header {
@@ -672,18 +707,18 @@ h3, .h3 {
 
 .carousel-control.left {
   background-image: none;
-  left: 17%;
+  left: 19%;
 }
 
 .carousel-control.right {
   background-image: none;
-  right: -2%;
+  right: 0;
 }
 
 .carousel-indicators {
   width: auto;
   margin: 0;
-  bottom: -21.6%;
+  bottom: -21.1%;
   left: 0;
   right: 0;
   position: absolute;
@@ -762,8 +797,11 @@ h3, .h3 {
 
 //////////////// MODAL //////////////////
 
-.modal-dialog {
-  margin: 0;
+& .modal-dialog {
+  width: 100%;
+  height: 100%;
+  max-width: 1920px;
+  margin: auto;
 }
 
 & .modal-close-button {
@@ -774,7 +812,7 @@ h3, .h3 {
   font-family: $font-family-work-sans-thin;
   position: fixed;
   top: 1%;
-  right: 1%;
+  right: 0;
   z-index: 1;
   background: transparent;
   border: none;
