--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -17,8 +17,15 @@
   }
 
   & .section-header-img-wrapper {
-    width: 90%;
-    max-width: 300px;
+    max-width: 260px;
+    width: 68vh;
+    @include media-breakpoint-down(sm) {
+      margin-bottom: 5px;
+    }
+    @include media-breakpoint-up(md) {
+      max-width: 300px;
+      width: 90%;
+    }
     @include media-breakpoint-only(lg) {
       max-width: 240px;
     }
@@ -27,6 +34,12 @@
   & .section-header {
     @include media-breakpoint-only(md) {
       margin-bottom: 30px;
+    }
+  }
+
+  & .section-header-title {
+    @include media-breakpoint-down(sm) {
+      margin-bottom: 0;
     }
   }
 
@@ -62,6 +75,14 @@
     width: 100%;
     padding-top: 60%;
     margin-top: 2rem;
+    @include media-breakpoint-down(sm) {
+      width: 111%;
+      margin-top: 11%;
+    }
+    @include media-breakpoint-only(md) {
+      width: 109%;
+      margin-top: 5%;
+    }
     @include media-breakpoint-up(lg) {
       margin-top: 0;
       position: absolute;
@@ -72,7 +93,7 @@
 
   .portfolio-item-title {
     @include text-regular-title();
-    margin-bottom: 0.6rem;
+    margin-bottom: 1rem;
     @include media-breakpoint-up(lg) {
       @include text-regular-title-small();
       width: 76%;
@@ -108,7 +129,10 @@
   .portfolio-item-title-wrapper {
     display: block;
     width: 100%;
-    margin-top: 100px;
+    margin-top: 60px;
+    @include media-breakpoint-up(md) {
+      margin-top: 100px;
+    }
     @include media-breakpoint-up(lg) {
       display: none;
       bottom: 57%;
@@ -129,7 +153,7 @@
     width: 100%;
     margin-top: 70px;
     @include media-breakpoint-up(lg) {
-      //display: none;
+      display: none;
       margin-top: 0;
       position: absolute;
       width: 280px;
@@ -147,8 +171,10 @@
     }
 
     & .portfolio-item-title {
-      margin-bottom: 0.3rem;
-      margin-top: 0;
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 0.3rem;
+        margin-top: 0;
+      }
     }
 
     .portfolio-item-secondary-title {
@@ -159,6 +185,9 @@
       margin-bottom: 0;
       line-height: 1.2;
       width: 80%;
+      @include media-breakpoint-down(sm) {
+        width: 100%;
+      }
     }
   }
 
@@ -224,6 +253,9 @@
     position: absolute;
     top: -1.8rem;
     left: 4.2%;
+    @include media-breakpoint-only(md) {
+      top: -2.4rem;
+    }
     @include media-breakpoint-up(xl) {
       top: -2.4rem;
     }
@@ -374,6 +406,9 @@
       @include media-breakpoint-up(xl) {
         top: -2.4rem;
       }
+      @include media-breakpoint-only(md) {
+        top: -2.4rem;
+      }
     }
   }
 
@@ -388,6 +423,9 @@
       left: 10.5%;
       top: -1.6rem;
       @include media-breakpoint-up(xl) {
+        top: -2.4rem;
+      }
+      @include media-breakpoint-only(md) {
         top: -2.4rem;
       }
     }
@@ -407,6 +445,9 @@
       @include media-breakpoint-up(xl) {
         top: -2.4rem;
       }
+      @include media-breakpoint-only(md) {
+        top: -2.4rem;
+      }
     }
   }
 
@@ -421,6 +462,9 @@
       left: 10.5%;
       top: -1.6rem;
       @include media-breakpoint-up(xl) {
+        top: -2.4rem;
+      }
+      @include media-breakpoint-only(md) {
         top: -2.4rem;
       }
     }
@@ -439,6 +483,9 @@
       top: auto;
       transform: translateX(-50%);
       @include media-breakpoint-up(xl) {
+        bottom: -1.4rem;
+      }
+      @include media-breakpoint-only(md) {
         bottom: -1.4rem;
       }
     }
@@ -550,7 +597,7 @@
 
     & .portfolio-item-tablet {
       bottom: 1%;
-      left: 22%;
+      left: 21.5%;
     }
 
     & .portfolio-item-notebook {
@@ -633,10 +680,6 @@
       padding-top: 56%;
     }
 
-    & .portfolio-item-title {
-      margin: 0.2rem 0 0.2rem;
-    }
-
     & .portfolio-item-title-wrapper-horizontal {
       @include media-breakpoint-up(lg) {
         bottom: 63%;
@@ -657,10 +700,10 @@
 
     & .portfolio-items-wrapper {
       top: 25%;
-    }
-
-    & .portfolio-items-wrapper {
       padding-top: 48%;
+      @include media-breakpoint-down(sm) {
+        margin-top: 4%;
+      }
     }
 
     & .portfolio-item-notebook {
@@ -688,20 +731,22 @@
       margin-top: 0.5rem;
     }
 
-    & .portfolio-item-title {
-      margin-top: 0.5rem;
+    & .project-type-label {
+      @include media-breakpoint-down(xs) {
+        display: none;
+      }
+    }
+
+    & .line-breaker {
+      @include media-breakpoint-down(xs) {
+        display: block;
+      }
     }
   }
 
   /////////  MODAL  /////////
 
   %portfolio-item-modal {
-
-    & .modal-dialog {
-      width: 97%;
-      height: 90%;
-      max-width: none;
-    }
 
     & .portfolio-item-subtitle {
       margin-bottom: 2rem;
@@ -712,8 +757,12 @@
     & .portfolio-item-modal-details-wrapper {
       position: absolute;
       left: -94%;
-      top: 8.6%;
-      width: 29%;
+      top: 0;
+      bottom: 0;
+      width: 27%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
     }
 
     & .portfolio-item-modal-wrapper {
@@ -722,7 +771,7 @@
       bottom: 0;
       min-height: 500px;
       @include media-breakpoint-up(xl) {
-        min-height: 770px;
+        min-height: 680px;
       }
       left: 50%;
       right: 0;
@@ -741,18 +790,18 @@
 
     & .portfolio-item-notebook {
       position: absolute;
-      padding-top: 86.3%;
+      padding-top: 83.3%;
       top: 50%;
       left: -31%;
       bottom: auto;
       max-width: none;
-      width: 133%;
+      width: 128%;
       margin-top: -35%;
       z-index: 1;
       @include media-breakpoint-up(xl) {
-        width: 145%;
-        margin-top: -38%;
-        left: -41%;
+        width: 140%;
+        margin-top: -40%;
+        left: -42%;
       }
 
       & .portfolio-item-device-img {
@@ -780,17 +829,17 @@
 
     & .portfolio-item-mobile {
       position: absolute;
-      padding-top: 55.5%;
+      padding-top: 53%;
       top: 50%;
-      left: -48%;
+      left: -47%;
       bottom: auto;
       max-width: none;
-      width: 24%;
+      width: 23%;
       margin-top: -9%;
       z-index: 2;
       @include media-breakpoint-up(xl) {
-        top: 57%;
-        left: -55%;
+        margin-top: -8%;
+        left: -54%;
       }
 
       & .portfolio-item-device-img {
@@ -819,13 +868,13 @@
       left: -33%;
       bottom: auto;
       max-width: none;
-      width: 115%;
-      margin-top: -35%;
+      width: 112%;
+      margin-top: -37%;
       z-index: 1;
       @include media-breakpoint-up(xl) {
-        width: 130%;
-        margin-top: -38%;
-        left: -40%;
+        width: 123%;
+        margin-top: -40%;
+        left: -39%;
       }
 
       & .portfolio-item-img-full-wrapper {
@@ -860,6 +909,14 @@
 
   .portfolio-item-modal-notebook-mobile {
     @extend %portfolio-item-modal;
+
+    & .carousel-control.left {
+      background-image: none;
+      left: 19%;
+      @include media-breakpoint-up(xl) {
+        left: 17%;
+      }
+    }
   }
 
   .portfolio-item-modal-tv {
@@ -874,14 +931,14 @@
     }
 
     .carousel-indicators {
-      bottom: -10%;
+      bottom: -6%;
       @include media-breakpoint-up(xl) {
-        bottom: -22%;
+        bottom: -13%;
       }
     }
 
     & .portfolio-item-modal-details-wrapper {
-      width: 37%;
+      width: 35%;
     }
   }
 
@@ -889,7 +946,7 @@
     @extend %portfolio-item-modal;
 
     .carousel-control.left {
-      left: 23%;
+      left: 22%;
     }
 
     & .portfolio-item-notebook {
@@ -900,7 +957,7 @@
     }
 
     & .portfolio-item-modal-details-wrapper {
-      width: 37%;
+      width: 35%;
     }
   }
 
@@ -912,7 +969,7 @@
   .carousel-labels {
     @include text-light-title-small();
     position: absolute;
-    left: -1%;
+    left: -2.2%;
     top: -3.5%;
     width: 100%;
     text-align: center;
